@@ -72,6 +72,14 @@ a ; b ;; c
 - `IterationInfo` now has a property for the `iterationIndex` and one for a map of data variable names to values.
   This is typically not interesting for the average user, but might be helpful for authors of Spock extensions.
 
+- `constructorArgs` now properly transport type cast information to the constructor selection,
+  for example to disambiguate multiple candidate constructors
++
+[source,groovy]
+----
+Spy(constructorArgs: [null as String, (Pattern) null])
+----
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
